--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+@import "~slick-carousel/slick/slick.css";
+@import "~slick-carousel/slick/slick-theme.css";
+
 :root {
     --boxShadow: 0 1px 2px rgba(0,0,0,.9), 0 0px 2px rgba(0,0,0,.9);
 }
@@ -20,5 +23,16 @@
     }
     .topbar {
         box-shadow: var(--boxShadow);
+    }
+
+    .slide{
+        transform: scale(0.2);
+        transition: transform 300ms;
+        opacity: 0.5;
+    }
+      
+    .activeSlide{
+        transform: scale(1.1);
+        opacity: 1;
     }
 }
